fixed profile name and pic

--- a/public/index.html
+++ b/public/index.html
@@ -36,11 +36,11 @@
 
     <header class="header-container">
       <div>
-          <img src="/images/profile-hex.png"> 
+          <img id="profile-picture" src="/images/despicableme.png"> 
       </div>
       <br>
       <div>
-          <h2>Amy Mansell</h2>
+          <h2>Ahmed Tarabia</h2>
       </div>
     </header>
 
