fixed alignment of main content

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,11 @@
     </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <h1> hey</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit optio repellendus quos quibusdam neque vero nulla hic quae animi minima dignissimos perspiciatis, deleniti, cupiditate iure adipisci facilis enim sapiente sit.</p>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, dolorem maxime molestiae repudiandae aliquam, eos ad cumque reiciendis, molestias rem ducimus corporis porro beatae nobis reprehenderit vitae impedit assumenda asperiores?</p>
+    </main>
   </body>
 </html>
