--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,17 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <h1> hey</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit optio repellendus quos quibusdam neque vero nulla hic quae animi minima dignissimos perspiciatis, deleniti, cupiditate iure adipisci facilis enim sapiente sit.</p>
-
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, dolorem maxime molestiae repudiandae aliquam, eos ad cumque reiciendis, molestias rem ducimus corporis porro beatae nobis reprehenderit vitae impedit assumenda asperiores?</p>
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form method="POST" action="/tweets">
+          <label for="tweet-text">What are you humming about?</label>
+          <textarea name="text" id="tweet-text"></textarea>
+          <div>
+            <button type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
     </main>
   </body>
 </html>
