all tweets styling

--- a/public/index.html
+++ b/public/index.html
@@ -59,18 +59,28 @@
           </div>
         </form>
       </section>
+
       <section class="all-tweets">
-        <article>
-          <header>
-            head
+        <article class="each-tweet">
+          <header class="tweet-header">
+            <div>
+              <img src="./images/profile-hex.png">
+              <p>Ahmed Tarabia</p>
+            </div>
+            <div>
+              <p>@AhmedT</p>
+            </div>
           </header>
-          <div>
-            sdsdsds
-          </div>
+          
+          <p>Hey how are u?</p>
+
           <footer>
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-repeat"></i>
-            <i class="fas fa-heart"></i>
+            <div>10 mins ago</div>
+            <div>
+              <i class="fas fa-flag"></i>
+              <i class="fas fa-repeat"></i>
+              <i class="fas fa-heart"></i>
+            </div>
           </footer>
         </article>
       </section>
