each tweet shown hstyled

--- a/public/index.html
+++ b/public/index.html
@@ -65,14 +65,14 @@
           <header class="tweet-header">
             <div>
               <img src="./images/profile-hex.png">
-              <p>Ahmed Tarabia</p>
+              <p>Newton</p>
             </div>
             <div>
-              <p>@AhmedT</p>
+              <p>@SirIsaac</p>
             </div>
           </header>
           
-          <p>Hey how are u?</p>
+          <p>If I have seen further it is by standing on the shoulders of giants</p>
 
           <footer>
             <div>10 mins ago</div>
