--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,10 @@
     <main class="container">
       <section class="new-tweet">
         <form action="/" method="post" class="new-form">
+          <div id="error-message">
+            
+          </div>
+          
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <div class="button-and-counter">
@@ -155,6 +159,11 @@
           </footer>
         </article> -->
       </section>
+      <script>
+        document.querySelectorAll(`#tweet-text[data-error1]`).forEach(inpEl => {
+          inpEl.addEventListener('input', ()=> inpEl.parentElement.removeAttribute('data-error1'))
+        })
+      </script>
     </main>
   </body>
 </html>
